--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -6,6 +6,8 @@ body {
 	background-color: var(--page-bg);
 	color: var(--text-color);
     font-family: var(--font-main);
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 img {
 	display: block;
