--- a/src/scss/blocks/_btn-signup.scss
+++ b/src/scss/blocks/_btn-signup.scss
@@ -9,7 +9,7 @@
 
     border-radius: 8px;
     border: 1px solid #878787;
-    background-color: #181818;
+    background-color: var(--text-color);
 
     color: #fff;
     font-size: 16px;
