--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -5,10 +5,47 @@ html {
 body {
 	background-color: var(--page-bg);
 	color: var(--text-color);
-    font-family: var(--font-main);
+	font-family: var(--font-main);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 img {
 	display: block;
+}
+.title-1 {
+	color: var(--text-color);
+	font-size: 72px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+
+	&--decor{
+		position: relative;
+	}
+
+	&--decor::after {
+		content: "";
+
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		width: 268px;
+		height: 24px;
+
+		z-index: -1;
+		
+		background-image: url(./../img/discover/underline.svg);
+		background-repeat: no-repeat;
+	}
+}
+.text {
+	color: var(--text-muted);
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 450;
+	line-height: 150%; /* 27px */
+
+	p + p {
+		margin-top: 1em;
+	}
 }
