--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -12,6 +12,11 @@
     display: grid;
     gap: 8px;
 
+    background-image: url(../../img/discover/map.svg);
+    background-position: 0 0;
+    background-size: auto;
+    background-repeat: no-repeat;
+
     span {
         font-size: 16px;
         font-style: normal;
@@ -20,12 +25,10 @@
     }
 }
 .form__input {
-
     font-size: 14px;
     font-weight: 450;
 
-
-    &::placeholder{
+    &::placeholder {
         color: var(--text-muted);
     }
 }
