--- a/src/scss/blocks/_discover.scss
+++ b/src/scss/blocks/_discover.scss
@@ -8,19 +8,21 @@
     gap: 80px;
     align-items: center;
 }
-.discover__desc {
-}
+
 .discover__title {
     margin-bottom: 24px;
 }
-.title-1 {
-}
+
 .discover__text {
     margin-bottom: 40px;
 }
-.discover__form {
-}
+
 .discover__picture {
+    position: relative;
 }
-.discover__picture-img {
+
+.discover__picture-hint {
+    position: absolute;
+    top: 90px;
+    left: 40px;
 }
