--- a/src/scss/blocks/_discover.scss
+++ b/src/scss/blocks/_discover.scss
@@ -26,3 +26,9 @@
     top: 90px;
     left: 40px;
 }
+
+.discover__picture-scroll {
+    position: absolute;
+    right: 15px;
+    bottom: 20px;
+}
