--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-	background-color: rgb(62, 62, 62);
+	background-color:var(--text-color) ;
 	padding: 50px 0;
 	font-size: 32px;
     color: #fff;
