--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -38,6 +38,14 @@ img {
 		background-repeat: no-repeat;
 	}
 }
+
+.title-3 {
+	font-size: 36px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+}
+
 .text {
 	color: var(--text-muted);
 	font-size: 18px;
