--- a/src/scss/blocks/_hint-discover.scss
+++ b/src/scss/blocks/_hint-discover.scss
@@ -44,7 +44,7 @@
         width: 17px;
         height: 16px;
 
-        background-image: url(../img/discover/star-small.svg);
+        background-image: url(../img/icons/star-small.svg);
         background-repeat: no-repeat;
     }
 }
