--- a/src/scss/blocks/_testimonials.scss
+++ b/src/scss/blocks/_testimonials.scss
@@ -12,6 +12,13 @@
 
     animation: slideUp 20s linear infinite;
 
+    &:nth-child(2){
+        padding-top: 100px;
+    }
+    &:nth-child(3){
+        padding-top: 24px;
+    }
+
 }
 @keyframes slideUp {
     0%{
