--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,14 +1,37 @@
 .footer {
-	background-color:var(--text-color) ;
-	padding: 50px 0;
-	font-size: 32px;
-    color: #fff;
+	background-color: var(--text-color);
+	padding: 80px 0;
+	color: var(--text-white);
 
-	h1 {
-		font-size: 32px;
+	a {
+		color: var(--text-white);
 	}
+}
 
-	@media (max-width: 1200px) {
-		font-size: 26px;
+.footer__row {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 128px;
+
+	align-items: start;
+}
+.footer__copyright {
+	display: grid;
+	gap: 24px;
+
+	p {
+		font-size: 16px;
+		font-style: normal;
+		font-weight: 450;
+		line-height: 150%;
 	}
+}
+.footer__copyright-text {
+	max-width: 300px;
+}
+.footer__nav {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	column-gap: 40px;
+	align-items: start;
 }
