--- a/src/scss/blocks/_testimonials.scss
+++ b/src/scss/blocks/_testimonials.scss
@@ -10,7 +10,7 @@
     display: grid;
     gap: 32px;
 
-    animation: slideUp 20s linear infinite;
+    // animation: slideUp 20s linear infinite;
 
     &:nth-child(2){
         padding-top: 100px;
