--- a/src/scss/blocks/_testimonials.scss
+++ b/src/scss/blocks/_testimonials.scss
@@ -3,19 +3,7 @@
     display: grid;
     gap: 32px;
     grid-template-columns: repeat(3, 1fr);
-}
-.testimonials__col {
-    // display: grid;
-    // gap: 32px;
-
-    // animation: slideUp 20s linear infinite;
-
-    // &:nth-child(2) {
-    //     padding-top: 100px;
-    // }
-    // &:nth-child(3) {
-    //     padding-top: 24px;
-    // }
+    margin: 0 10px;
 }
 
 .testimonials__swiper {
