update docs file

--- a/src/html/blocks/templates/card__review.html
+++ b/src/html/blocks/templates/card__review.html
@@ -5,8 +5,8 @@
             @@for(var i=0; i < context.stars ;i++){ <img src="./img/testimonials/star.svg" alt="Star">
                 }
 
-                @@if(context.stars < 5){ @@for(var i=0; i < 5-context.stars ;i++){ <img
-                    src="./img/testimonials/star-off.svg" alt="Star">
+                @@if(context.stars < 5){ @@for(var i=0; i < 5-context.stars ;i++){ 
+                    <img src="./img/testimonials/star-off.svg" alt="Star off">
                     }
                     }
         </div>
