--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 /* Base */
 @import "./base/reset";
 @import "./base/vars";
+@import "./base/mixsins";
 @import "./base/base";
 @import "./base/utils";
 @import "./base/containers";
