--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -5,6 +5,15 @@
 
     padding: 12px 16px;
     gap: 16px;
+
+    border: 1px solid rgba(144, 144, 144, 0.3);
+    border-radius: 16px;
+    background-color: #fff;
+
+
+    @include mediaMobile {
+        grid-template-columns: 1fr;
+    }
 }
 .form__label {
     padding-left: 36px;
@@ -23,6 +32,10 @@
         font-weight: 500;
         line-height: normal;
     }
+
+    &--calendar {
+        background-image: url(../../img/discover/calendar.svg);
+    }
 }
 .form__input {
     font-size: 14px;
@@ -37,6 +50,24 @@
     height: 24px;
     width: 1px;
     background: var(--text-muted);
+
+    @include mediaTablet{
+        display: none;
+    }
 }
 .form__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 12px;
+    border-radius: 18px;
+    background:var(--accent);
+    
+
+
+    transition: all 0.2s ease-in;
+    &:hover {
+        opacity: 0.8;
+    }
 }
