add burger menu

--- a/src/scss/blocks/_nav-icon.scss
+++ b/src/scss/blocks/_nav-icon.scss
@@ -5,8 +5,8 @@
 	--width: 40px;
 	--height: 30px;
 
-	--line-height: 4px;
-	--spacing: 6px;
+	--line-height: 2px;
+	--spacing: 7px;
 
 	--color: #000;
 	--radius: 4px;
@@ -25,6 +25,7 @@
 }
 
 .nav-icon {
+
 	position: relative;
 	width: var(--width);
 	height: var(--line-height);
@@ -81,6 +82,7 @@
 /* Layout */
 
 .mobile-nav-btn {
+	position: relative;
 	z-index: 999;
 	// display: none;
 }
