--- a/src/scss/blocks/_discover.scss
+++ b/src/scss/blocks/_discover.scss
@@ -7,6 +7,10 @@
     grid-template-columns: 1fr 1fr;
     gap: 80px;
     align-items: center;
+
+    @include mediaTablet {
+        grid-template-columns: 1fr;
+    }
 }
 
 .discover__title {
@@ -19,6 +23,18 @@
 
 .discover__picture {
     position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: fit-content;
+
+    justify-self: center;
+
+    @include mediaTablet {
+        grid-row: -1 / 1;
+    }
 }
 
 .discover__picture-hint {
@@ -26,10 +42,23 @@
     top: 90px;
     left: 40px;
     z-index: 1;
+
+    @include mediaLaptor {
+        top: 50px;
+        left: 20px;
+    }
 }
 
 .discover__picture-scroll {
     position: absolute;
     right: 15px;
     bottom: 20px;
+
+    @include mediaLaptor {
+        right: 5px;
+        bottom: 0px;
+    }
+    @include mediaMobile{
+        width: 30%;
+    }
 }
