--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -4,24 +4,42 @@
     align-items: center;
     gap: 32px;
 }
+.nav__logo {
+    flex-shrink: 0;
+}
 
 .nav_list {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 24px;
-    
+
     a {
         color: var(--text-color);
     }
-    a:hover, a.active{
-        color:  var(--accent);
+    a:hover,
+    a.active {
+        color: var(--accent);
     }
 
-} 
+    @include mediaMobile {
+        display: none;
+    }
+}
 
 .nav_btns {
     display: flex;
     gap: 12px;
 
+    @include mediaMobile {
+        display: none;
+    }
+}
+
+.nav__icon {
+    display: none;
+
+    @include mediaMobile {
+        display: block;
+    }
 }
