--- a/src/scss/blocks/_partners.scss
+++ b/src/scss/blocks/_partners.scss
@@ -1,11 +1,21 @@
 .partners {
     padding: 60px 0;
+
+    @include mediaMobile {
+        padding: 30px 0;
+    }
 }
 .partners__row {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 30px;
+
+    @include mediaTablet {
+        gap: 20px;
+        flex-direction: column;
+    }
+
 }
 .partners__title {
     color: var(--text-muted);
@@ -19,4 +29,12 @@
     display: flex;
     align-items: center;
     gap: 32px;
+
+    flex-wrap: wrap;
+
+    @include mediaLaptor {
+        
+        justify-content: center;
+        gap: 16px;
+    }
 }
