--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -17,6 +17,12 @@
 		
 	}
 }
+@mixin mediaMobileS(){
+	@media (width < 475px) {
+		@content;
+		
+	}
+}
 @mixin mediaMobileXS(){
 	@media (width < 375px) {
 		@content;
