--- a/src/scss/blocks/_popular.scss
+++ b/src/scss/blocks/_popular.scss
@@ -1,5 +1,9 @@
 .popular {
     padding: 60px 0;
+
+    @include mediaMobileS{
+        padding: 30px 0;
+    }
 }
 
 .popular__top {
@@ -8,13 +12,25 @@
     justify-content: space-between;
     align-items: center;
     gap: 30px;
+
+    @include mediaMobileS{
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+        margin-bottom: 15px;
+    }
 }
 .popular__title {
     display: grid;
     gap: 16px;
+
+    @include mediaMobile {
+        gap: 8px;
+    }
 }
 
 .popular__control {
+    flex-shrink: 0;
     display: flex;
     gap: 16px;
 }
