--- a/src/scss/blocks/_testimonials.scss
+++ b/src/scss/blocks/_testimonials.scss
@@ -1,17 +1,62 @@
+.testimonials-horizontal {
+    display: none;
+
+    .swiper {
+        width: 100%;
+        padding: 30px 0;
+    }
+    
+    .card__review {
+        height: 335px;
+    }
+
+    @include mediaTablet {
+        display: block;
+    }
+    @include mediaMobileXS {
+        .swiper-slide {
+            width: 320px;
+        }
+
+        .card__review {
+            height: 290px;
+            padding: 20px;
+            gap: 20px;
+            justify-content: space-between;
+        }
+    }
+}
+
 .testimonials__grid {
     overflow: hidden;
     display: grid;
     gap: 12px;
     grid-template-columns: repeat(3, 1fr);
     margin: 0 -10px;
+
+    @include mediaTablet {
+        display: none;
+    }
 }
 
 .testimonials__swiper {
     height: 900px;
 
+    @include mediaLaptor {
+        height: 600px;
+    }
+
     .swiper-slide {
-        padding: 0 10px;
-        height: 325px;
+        padding: 0 10px 32px;
+        height: 357px;
+
+        & > * {
+            height: 100%;
+        }
+
+        @include mediaLaptor {
+            height: 400px;
+        }
     }
 }
 
