--- a/src/scss/blocks/_subscribe-form.scss
+++ b/src/scss/blocks/_subscribe-form.scss
@@ -2,6 +2,11 @@
     display: flex;
     align-items: center;
     gap: 12px;
+
+    @include mediaMobileS{
+        flex-direction: column;
+        align-items: stretch;
+    }
 }
 .subscribe-form__input {
     flex-grow: 1;
