--- a/src/scss/blocks/_footer-nav.scss
+++ b/src/scss/blocks/_footer-nav.scss
@@ -1,11 +1,15 @@
 .footer-nav {
     display: grid;
     gap: 24px;
+
+    @include mediaMobileS {
+        gap: 16px;
+    }
 }
 .footer-nav__title {
     font-size: 18px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 150%; /* 27px */
 }
 .footer-nav__list {
@@ -14,5 +18,13 @@
 
     li {
         padding: 8px 0;
+
+        @include mediaMobileS {
+            padding: 4px 0;
+        }
+    }
+
+    @include mediaMobileS {
+        font-size: 14px;
     }
 }
